this should be a good fix for #1